--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
   <body>
 <!-- Top Container -->
    <div class="top-container">
-      <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+      <img class="top-cloud" src="cloud.png" alt="cloud-img">
     <!--  <img class="bitmoji" src="Hi-Bitmoji.jpeg" alt="bitmoji-img"> -->
       <h1>I'm Jairus J. Lamb,</h1>
       <h2 class="sub">a teacher.</h2>
-      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-      <img class="mountain" src="images/mountain.png" alt="mountain-img">
+      <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
+      <img class="mountain" src="mountain.png" alt="mountain-img">
     </div>
 
 <!-- Middle Container -->
